Fix errors and update files

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -3,7 +3,8 @@ import { NameTransition } from "./name";
 <NameTransition />
 I'm Dinesh, a 20 year-old student.  
 A self-taught programmer.  
-Currently learning to build with JavaScript.
+Currently learning to build with JavaScript.  
+About [me](/work)
 
 
 ## Writing
@@ -13,7 +14,7 @@ Currently learning to build with JavaScript.
 - [Understanding AI](/n/ai)
 
 ## Code
-
+- ["WORK IN PROGRESS"]
 - [next-saas-starter] 
 - [next-email-client]
 - [next-music-player]
