--- a/app/page.mdx
+++ b/app/page.mdx
@@ -4,7 +4,7 @@ import { NameTransition } from "./name";
 I'm Dinesh, a 20 year-old student.  
 A self-taught programmer.  
 Currently learning to build with JavaScript.  
-About [me](/work)
+About [me](/me)
 
 
 ## Writing
