--- a/app/me/page.mdx
+++ b/app/me/page.mdx
@@ -1,9 +1,9 @@
 import { AnimatedName } from '@/app/n/animated-name.tsx';
 
 export const metadata = {
-  title: 'Work',
+  title: 'Me',
   alternates: {
-    canonical: '/n/work',
+    canonical: '/n/Me',
   },
 };
 
