--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,4 +1,4 @@
-import { NameTransition } from "./name";
+import { NameTransition } from './name';
 
 <NameTransition />
 I'm Dinesh, a 20 year-old student.  
