--- a/app/n/stack/page.mdx
+++ b/app/n/stack/page.mdx
@@ -3,17 +3,30 @@ import { AnimatedName } from '../animated-name.tsx';
 export const metadata = {
   title: 'My Stack',
   alternates: {
-    canonical: '/n/stack',
-  },
+    canonical: '/n/stack'
+  }
 };
 
-# My Stack
+# My Stack  
+<span className="italic text-sm text-gray-500">March 16, 2025</span>  
 
 <AnimatedName />
 
+<details className="mb-4">
+  <summary className="text-gray-600 dark:text-gray-400 text-[16px] font-semibold cursor-pointer">Table of Contents</summary>
+  <ul className="list-disc pl-6 mt-2 text-gray-500 dark:text-gray-400 text-[15px]">
+    <li><a href="#framework-nextjs-and-react" className="hover:text-blue-500">Framework (Next.js and React)</a></li>
+    <li><a href="#styling-tailwind-css-and-shadcn" className="hover:text-blue-500">Styling (Tailwind CSS & shadcn/ui)</a></li>
+    <li><a href="#database-postgres-and-drizzle" className="hover:text-blue-500">Database (Postgres & Drizzle)</a></li>
+    <li><a href="#ai-v0" className="hover:text-blue-500">AI (v0)</a></li>
+    <li><a href="#coding-patterns" className="hover:text-blue-500">Coding Patterns</a></li>
+  </ul>
+</details>
+
+
 Here's where I'm currently most productive:
 
-## 1. Framework (Next.js and React)
+## <span id="framework-nextjs-and-react">1. Framework (Next.js and React)</span>
 
 I’ve been working with Next.js since 2018 (and React since 2015) so I'm most productive here. I start all my projects with TypeScript.
 
