--- a/app/page.mdx
+++ b/app/page.mdx
@@ -12,9 +12,10 @@ About [me](/me)
 - [Rust is Eating JavaScript](/n/rust)
 - [My Stack](/n/stack)
 - [Understanding AI](/n/ai)
+- [Introduction to Blockchain](/n/blockchain)
 
 ## Code
+- [React Portfolio] 
 - ["WORK IN PROGRESS"]
-- ["Development Test"]
 - ["Development Test"]
 - ["Development Test"]
