main page updates

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -8,14 +8,15 @@ About [me](/me)
 
 
 ## Writing
-
+- [Introduction to Blockchain](/n/blockchain)
 - [Rust is Eating JavaScript](/n/rust)
 - [My Stack](/n/stack)
 - [Understanding AI](/n/ai)
-- [Introduction to Blockchain](/n/blockchain)
+
 
 ## Code
-- [React Portfolio] 
+- [Solana Faucet](https://github.com/DineshMN1/Solana-Faucet)
+- [React Portfolio](https://github.com/DineshMN1/react-portfolio)
+- [Todo-List](https://github.com/DineshMN1/react-learning)
+- [Ollama Custom model](https://github.com/DineshMN1/ollama-model-create)
 - ["WORK IN PROGRESS"]
-- ["Development Test"]
-- ["Development Test"]
