--- a/app/me/page.mdx
+++ b/app/me/page.mdx
@@ -19,4 +19,4 @@ export function Small({ children }) {
 
 On a mission to build products developers love
 
-#
+[Resume](https://drive.google.com/file/d/1YrqaOG-JdauM0C5MuncLCqhsvE3Kz78k/view?usp=sharing)
