--- a/app/page.mdx
+++ b/app/page.mdx
@@ -11,10 +11,9 @@ About [me](/me)
 - [Introduction to Blockchain](/n/blockchain)
 
 
-
 ## Code
 - [Solana Faucet](https://github.com/DineshMN1/Solana-Faucet)
 - [React Portfolio](https://github.com/DineshMN1/react-portfolio)
 - [Todo-List](https://github.com/DineshMN1/react-learning)
 - [Ollama Custom model](https://github.com/DineshMN1/ollama-model-create)
-- ["WORK IN PROGRESS"]
+- **Work in Progress**
