--- a/app/n/blockchain/page.mdx
+++ b/app/n/blockchain/page.mdx
@@ -100,10 +100,12 @@ Every block's hash is tightly connected to the one that follows it. So, modifyin
 
 <h2 id="conclusion" className="text-xl font-semibold mt-8 mb-2">Conclusion</h2>
 
-In this blog post, we covered the foundational concepts of blockchain technology:
+In this blog post, we explored the foundational concepts of blockchain technology:
 
-- Key properties that make blockchains secure and reliable  
-- The core components that form a blockchain  
-- How transactions are validated and consensus is achieved  
+- The **basic structure** of a block and how blocks are linked  
+- The **genesis block** as the starting point of every blockchain  
+- The **security model** that makes blockchain tamper-resistant  
+- The flow of **transactions** and how data is recorded  
+- The role of **hashes** in maintaining the integrity of the chain  
 
-Together, these insights provide a solid understanding of how blockchain works under the hood — setting the stage for exploring more advanced topics in the future.
+Together, these topics build a clear picture of how blockchain works under the hood — providing a strong foundation for diving into more advanced concepts in the future.
