--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,10 +1,17 @@
 import { NameTransition } from './name';
 
 <NameTransition />
-I'm Dinesh, a 20 year-old student.  
-A self-taught programmer.  
-Currently learning to build with JavaScript.  
-About [me](/me)
+Oh, hey there  
+I'm Dinesh, a 20-year-old student from Chennai, India.  
+
+Just a guy who loves to code, breaks stuff sometimes,  
+and brews a decent cup of coffee.  
+
+Currently learning to build with JavaScript and Rust, with  
+a deep curiosity for blockchain.
+
+[About me](/me)
+
 
 
 ## Writing
@@ -13,7 +20,8 @@ About [me](/me)
 
 ## Code
 - [Solana Faucet](https://github.com/DineshMN1/Solana-Faucet)
-- [React Portfolio](https://github.com/DineshMN1/react-portfolio)
+- [Wall-E Rover](https://github.com/DineshMN1/Wall-E.git)
+- [Portfolio](https://github.com/DineshMN1/react-portfolio)
 - [Todo-List](https://github.com/DineshMN1/react-learning)
 - [Ollama Custom model](https://github.com/DineshMN1/ollama-model-create)
 - **Work in Progress**
