--- a/app/page.mdx
+++ b/app/page.mdx
@@ -7,8 +7,8 @@ I'm Dinesh, a 20-year-old student from Chennai, India.
 Just a guy who loves to code, breaks stuff sometimes,  
 and brews a decent cup of coffee.  
 
-Currently learning to build with JavaScript and Rust, with  
-a deep curiosity for blockchain.
+Currently learning to build with Rust and JavaScript,  
+with a deep curiosity for blockchain.
 
 [About me](/me)
 
@@ -19,9 +19,11 @@ a deep curiosity for blockchain.
 
 
 ## Code
+- [Portfolio](https://react-portfolio-dineshmn1.vercel.app/)
+- [Solana Voting Dapp](https://github.com/DineshMN1/voting-workshop-chennai)
 - [Solana Faucet](https://github.com/DineshMN1/Solana-Faucet)
 - [Wall-E Rover](https://github.com/DineshMN1/Wall-E.git)
-- [Portfolio](https://github.com/DineshMN1/react-portfolio)
+- [Minigrep CLI](https://github.com/dineshmn1/minigrep)
 - [Todo-List](https://github.com/DineshMN1/react-learning)
 - [Ollama Custom model](https://github.com/DineshMN1/ollama-model-create)
-- **Work in Progress**
+- **WIP**
