--- a/app/page.mdx
+++ b/app/page.mdx
@@ -16,6 +16,7 @@ with a deep curiosity for blockchain.
 
 ## Writing
 - [Introduction to Blockchain](/n/blockchain)
+- [Become a Rustacean](/n/rustacean)
 
 
 ## Code
