--- a/app/n/rustacean/page.mdx
+++ b/app/n/rustacean/page.mdx
@@ -793,31 +793,4 @@ fn even_vec(vec: Vec<i32>) -> Vec<i32> {
 }
 ```
 
----
-
-## Key Concepts from the Files
-
-1. **Variable Binding & Mutability**: Using `let` for immutable variables and `let mut` for mutable ones.
-2. **Ownership**: Rust's unique approach to memory management without garbage collection.
-3. **Borrowing**: Using references (`&` and `&mut`) to avoid ownership transfer.
-4. **Collections**: Working with `Vec<T>`, `HashMap<K, V>`, etc.
-5. **String Types**: Understanding `String` vs string slices (`&str`).
-6. **Structs & Enums**: Custom data types for organizing related data.
-7. **Pattern Matching**: Using `match` for branching logic.
-8. **Option & Result**: Handling absence of values and potential failures.
-9. **Iterators**: Processing sequences of elements.
-10. **Functions**: Writing and using functions with different parameter and return types.
-
-## Advanced Topics to Explore
-
-1. **Traits and Generics**: Enabling polymorphism and code reuse
-2. **Lifetimes**: Managing reference validity
-3. **Multithreading**: Safe concurrent programming
-4. **Macros**: Meta-programming in Rust
-5. **Async/Await and Tokio**: Asynchronous programming
-6. **Futures**: Representing asynchronous operations
-7. **Package Management**: Using Cargo and crates
-8. **Smart Pointers**: Types like Box, Rc, Arc, etc. 
-9. **Error Handling Strategies**: Using ? operator, propagating errors
-10. **FFI (Foreign Function Interface)**: Interoperating with C code
-11. **Unsafe Rust**: Working with unsafe blocks when necessary
+Rest is rustling...
