--- a/app/page.mdx
+++ b/app/page.mdx
@@ -20,11 +20,9 @@ with a deep curiosity for blockchain.
 
 
 ## Code
-- [Portfolio](https://react-portfolio-dineshmn1.vercel.app/)
+- [Portfolio](https://dineshmn.me)
+- [Portfolio react](https://react-portfolio-dineshmn1.vercel.app/)
 - [Solana Voting Dapp](https://github.com/DineshMN1/voting-workshop-chennai)
 - [Solana Faucet](https://github.com/DineshMN1/Solana-Faucet)
 - [Wall-E Rover](https://github.com/DineshMN1/Wall-E.git)
-- [Minigrep CLI](https://github.com/dineshmn1/minigrep)
 - [Todo-List](https://github.com/DineshMN1/react-learning)
-- [Ollama Custom model](https://github.com/DineshMN1/ollama-model-create)
-- **WIP**
