--- a/app/me/page.mdx
+++ b/app/me/page.mdx
@@ -19,6 +19,8 @@ export function Small({ children }) {
 
 On a mission to build products developers love
 
+Contributer @[superteam In](https://in.superteam.fun/)
+
 ## Resume
 [View resume](https://drive.google.com/file/d/1SaDGSpvrwjpeU1uAscE4hP2PtP7kVQ-T/view?usp=sharing)
 
